Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2800011 by drunken monkey, borisson_: Fixed display of hidden properties
  when adding fields.
- #2794093 by drunken monkey, borisson_, kamalrajsahu21: Fixed the processor
  reordering CSS.
- #2640982 by drunken monkey, borisson_: Fixed "unsaved changes" code in the
  Fields UI.
- #2727697 by drunken monkey, borisson_: Fixed serialization of modified
  indexes.
- #2747767 by joachim: Changed the "Aggregation type" form element to radios.
- #2565621 by LKS90, drunken monkey: Added a test for the database defaults
  submodule.
- #2684465 by drunken monkey, marthinal: Fixed indexing of related entities on
  multilingual sites.
- #2566241 by drunken monkey: Fixed index tracker select default value.
- #2555177 by drunken monkey: Fixed empty bundle selects in datasource config
  forms.

Search API 1.0, Beta 1 (2016-09-05):
------------------------------------
First Beta release of the project's Drupal 8 version. The API can be considered
mostly stable and an upgrade path will be provided for all data structure
changes from this point forward.